[gd_scene load_steps=2 format=2]

[ext_resource path="res://audio/NumberAudio.gd" type="Script" id=1]

[node name="NumberAudio" type="Node"]
script = ExtResource( 1 )

[node name="Channel_1" type="AudioStreamPlayer" parent="."]

[connection signal="finished" from="Channel_1" to="." method="_on_Channel_1_finished"]
